Overflow fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
   text-align: center;
 
   transition: background 0.5s, color 0.5s;
+
+  overflow: hidden;
 }
 
 /* * {
